--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,15 @@ NODE_ENV=development
 PORT=8787
 DATABASE_URL=postgres://username:password@host:5432/pm_questionnaire
 GEMINI_API_KEY=your_gemini_api_key
-HASH_SECRET=replace_with_a_long_random_secret
+HASH_SECRET=replace_with_a_long_random_secret_min_32_chars
+ENCRYPTION_SECRET=replace_with_a_second_long_random_secret_min_32_chars
+TRUST_PROXY_HOPS=1
+MAX_AI_CONCURRENT=3
+MAX_AI_PER_DAY=1200
+AI_TIMEOUT_MS=12000
+# Optional: enable Turnstile bot verification
+# TURNSTILE_SECRET_KEY=your_turnstile_secret
+# VITE_TURNSTILE_SITE_KEY=your_turnstile_site_key
 # Optional: comma-separated list for cross-origin deployments
 # ALLOWED_ORIGINS=https://pm-gauntlet.yourdomain.com
 # Optional baseline value shown in UI
